--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 body{
-    gap: 150px;
+    gap: 100px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -26,13 +26,22 @@ body{
     flex: 1;
     margin: 0 auto;
     overflow-x: hidden;
-    background: linear-gradient(90deg, #020024 0%, rgba(233,30,30,1) 0%, rgba(214,121,215,1) 48%, rgba(255,162,0,1) 100%);}
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(77,30,233,1) 0%, rgba(0,179,18,1) 56%, rgba(255,162,0,1) 100%);
+}
 
 header{
     margin: 0 auto;
     padding: 20px 0;
     font-size: 40px;
     font-weight: 600;
+}
+
+header > a{
+    transition: all .3s;
+}
+
+header > a:hover{
+    color: #d3d3d3;
 }
 
 main{
@@ -59,7 +68,7 @@ main > p{
 }
 
 ::selection{
-    background-color: #658bb5;
+    background-color: #4037c5;
     color: #fafafa;
 }
 
@@ -71,15 +80,16 @@ div{
     gap: 20px;
 }
 
-div > a{
-    text-align: center;
+div > a,
+button{
+text-align: center;
     font-size: 25px;
-    color: aliceblue;
     background-color: #658bb5;
     border: 2px solid #658bb5;
     padding: 15px 100px;
     border-radius: 50px;
-    transition: all .4s;
+    transition: all .4s; 
+    color: #fafafa;
 }
 
 a:hover{
@@ -87,10 +97,43 @@ a:hover{
 }
 
 .hide{
-    display: none;
+    display: none !important;
 }
 
 #list{
     display: flex;
     flex-direction: column;
+    color: #fafafa;
+}
+
+.progress{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+progress{
+    width: 600px;
+    height: 15px;
+    border-radius: 50px;
+    justify-content: space-between;
+}
+
+progress::-webkit-progress-bar { 
+    background:  #fffb00; 
+    border-radius: 25px;
+} 
+progress::-webkit-progress-value {
+    background: #1474a1;
+    border-radius: 50px;
+}
+
+span,.title, .result, .summaru, .question{
+    color: #fafafa;
+}
+
+#quiz{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
