--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@
     /* outline: 2px solid lightgreen; */
 }
 
-body{
-    background-color: #9e9e9e;
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -26,7 +22,12 @@ body{
     flex: 1;
     margin: 0 auto;
     overflow-x: hidden;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(77,30,233,1) 0%, rgba(0,179,18,1) 56%, rgba(255,162,0,1) 100%);
+    /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(77,30,233,1) 0%, rgba(0,179,18,1) 56%, rgba(255,162,0,1) 100%); */
+    background: url('./img/back13.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 header{
@@ -41,7 +42,7 @@ header > a{
 }
 
 header > a:hover{
-    color: #d3d3d3;
+    color: #fff;
 }
 
 main{
@@ -63,9 +64,12 @@ main > p{
     padding: 25px 50px;
     background: rgba(255, 255, 255, 0.32);
     border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
     backdrop-filter: blur(4.9px);
     -webkit-backdrop-filter: blur(4.9px);
+    -webkit-box-shadow: 10px 10px 8px 0px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 10px 10px 8px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 10px 10px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
 ::selection{
@@ -85,16 +89,22 @@ div > a,
 button{
 text-align: center;
     font-size: 25px;
-    background-color: #658bb5;
-    border: 2px solid #658bb5;
     padding: 15px 100px;
     border-radius: 50px;
     transition: all .4s; 
-    color: #fafafa;
+    /* color: #fafafa; */
+    background: rgba(255, 255, 255, 0.28);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    /* border: 1px solid #383838; */
 }
 
 a:hover{
-    background-color: inherit;
+    /* background-color: inherit; */
+/* border: 1px solid #fafafa; */
+color: #fafafa;
+scale: 1.05;
 }
 
 .hide{
@@ -129,7 +139,7 @@ progress::-webkit-progress-value {
     border-radius: 50px;
 }
 
-span,.title, .result, .summaru, .question{
+span,.title, .result,.question{
     color: #fafafa;
 }
 
@@ -137,4 +147,23 @@ span,.title, .result, .summaru, .question{
     display: flex;
     flex-direction: column;
     gap: 25px;
+}
+
+.result-container{
+    align-items: center;
+}
+
+.results{
+    text-align: center;
+}
+
+h3.summary{
+    font-weight: 100;
+    max-width: 1400px;
+    padding: 25px 50px;
+    background: rgba(255, 255, 255, 0.32);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.9px);
+    -webkit-backdrop-filter: blur(4.9px);
 }
