--- a/style.css
+++ b/style.css
@@ -45,8 +45,10 @@ header > a:hover{
 }
 
 main{
+    /* font-size: 1.1rem; */
     font-size: 22px;
     flex: 1;
+    /* font-weight:bolder; */
     text-align: justify;
 }
 
@@ -144,6 +146,7 @@ progress::-webkit-progress-bar {
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
     border-radius: 25px;
+    border: 1px solid #1474a1;
 } 
 progress::-webkit-progress-value {
     background: #1474a1;
@@ -234,7 +237,7 @@ span.answer-description::before{
     content: '';
     flex: 0 0 25px;
     height: 25px;
-    background-color: #fff;
+    background-color: #ffffff1c;
     border: 2px solid #1474a1;
     opacity: 0.85;
     border-radius: 50%;
@@ -258,7 +261,8 @@ span.answer-description::after{
         text-align: start;
     }
 
-    section > p{
+    section > p,
+    .results{
         text-align: justify;
     }
 
@@ -276,8 +280,10 @@ span.answer-description::after{
         width: 70vw;
     }
 
-    #quiz{
+    #quiz,
+    .results{
         padding: 15px;
     }
+
 }
 
