--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 }
 
 body{
+    max-width: 100vw;
     gap: 100px;
     align-items: center;
     justify-content: center;
@@ -98,10 +99,11 @@ button{
     transition: all .4s; 
     /* color: #fafafa; */
     background: rgba(255, 255, 255, 0.28);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
     border: 2px solid #ffffff47;
+    box-shadow: 10px 10px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
 div > a:hover{
@@ -113,8 +115,8 @@ div > a:hover{
 
 button:hover{
     /* background-color: inherit; */
-border: 2px solid #fafafa;
-/* scale: 1.02; */
+    border: 2px solid #fafafa;
+    /* scale: 1.02; */
 }
 
 .hide{
@@ -146,7 +148,7 @@ progress::-webkit-progress-bar {
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
     border-radius: 25px;
-    border: 1px solid #1474a1;
+    /* border: 1px solid #1474a1; */
 } 
 progress::-webkit-progress-value {
     background: #1474a1;
@@ -264,10 +266,19 @@ span.answer-description::after{
     section > p,
     .results{
         text-align: justify;
+        background: inherit;
+    }
+
+    h3.summary{
+        font-size: 1.3rem;
+        background: none;
+        margin: 0;
+        padding: 15px !important;
     }
 
     body{
         gap: 25px;
+        overflow-x: hidden;
     }
 
     .progress{
@@ -284,6 +295,12 @@ span.answer-description::after{
     .results{
         padding: 15px;
     }
+}
 
+@media screen and (max-width: 550px){
+    #quiz,
+    button{
+        border-radius: 15px;
+    }
 }
 
