--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
 
 .element-animation {
     opacity: 0;
-    transform: translateY(15%);
+    transform: translateY(10%);
 }
 
 .element-animation.element-show {
@@ -123,6 +123,7 @@ button{
     -webkit-backdrop-filter: blur(7px);
     border: 2px solid #ffffff47;
     box-shadow: 10px 10px 8px 0px rgba(34, 60, 80, 0.2);
+    width: 100%;
 }
 
 div > a:hover{
@@ -278,6 +279,10 @@ span.answer-description::after{
         text-align: start;
     }
 
+    main > section > div{
+        align-items: center;
+    }
+
     h2.question{
         font-size: 1.5rem;
     }
@@ -324,6 +329,10 @@ span.answer-description::after{
     #quiz,
     button{
         border-radius: 15px;
+    }
+
+    div > a{
+        width: 50vw;
     }
 }
 
