--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     color: #383838;
     padding: 0;
     margin: 0;
-    /* outline: 2px solid lightgreen; */
+    outline: 2px solid lightgreen;
 }
 
 html {
@@ -123,7 +123,7 @@ button{
     -webkit-backdrop-filter: blur(7px);
     border: 2px solid #ffffff47;
     box-shadow: 10px 10px 8px 0px rgba(34, 60, 80, 0.2);
-    width: 100%;
+    /* width: 100%; */
 }
 
 div > a:hover{
@@ -323,6 +323,10 @@ span.answer-description::after{
     .results{
         padding: 15px;
     }
+    
+    div > a{
+        width: 40vw;
+    }
 }
 
 @media screen and (max-width: 550px){
@@ -331,8 +335,6 @@ span.answer-description::after{
         border-radius: 15px;
     }
 
-    div > a{
-        width: 50vw;
-    }
+    
 }
 
